dev/jwindmiller/slurm-17548759.out
  File "009_ContourL_Reanalysis_CWV.py", line 20
    009
      ^
SyntaxError: invalid token
 
Batch Job Summary Report for Job "wrap" (17548759) on daint
-----------------------------------------------------------------------------------------------------
             Submit            Eligible               Start                 End    Elapsed  Timelimit 
------------------- ------------------- ------------------- ------------------- ---------- ---------- 
2019-10-18T17:54:41 2019-10-18T17:54:41 2019-10-18T18:54:18 2019-10-18T18:54:58   00:00:40   00:30:00 
-----------------------------------------------------------------------------------------------------
Username    Account     Partition   NNodes   Energy
----------  ----------  ----------  ------  --------------
jwindmil    s916        normal           1        0 joules
 
This job did not utilize any GPUs
 
----------------------------------------------------------
Scratch File System        Files       Quota
--------------------  ----------  ----------
/scratch/snx3000               7     1000000
 
